--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -7,11 +7,10 @@ on:
 
 jobs:
   build:
-    name: Build APK
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
+    - name: Checkout code
       uses: actions/checkout@v3
 
     - name: Set up JDK 17
@@ -20,13 +19,13 @@ jobs:
         distribution: temurin
         java-version: '17'
 
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
+    - name: Make Gradle wrapper executable
+      run: chmod +x gradlew
 
     - name: Build Debug APK
       run: ./gradlew assembleDebug
 
-    - name: Upload APK
+    - name: Upload APK to artifact
       uses: actions/upload-artifact@v4
       with:
         name: DexAi_Ovey.apk
